sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/On_Offboarding_Checklist__c.object-meta.xml
<CustomObject>
    <label>On/Offboarding Checklist</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>On/Offboarding Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On/Offboarding Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>