sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Career_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Career_Discussion__c</fullName>
    <label>Career Discussion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>