sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Date_Joined__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined__c</fullName>
    <label>Date Joined</label>
    <type>Date</type>
</CustomField>