sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipLabel>On/Offboarding Checklists</relationshipLabel>
    <relationshipName>On_Offboarding_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>