sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Directors_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Directors_Lunch__c</fullName>
    <label>Directors Lunch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>