sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Directors_Lunch_Date__c.field-meta.xml
<CustomField>
    <fullName>Directors_Lunch_Date__c</fullName>
    <label>Directors Lunch Date</label>
    <type>Date</type>
</CustomField>