sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Fellow_Social_Date__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Social_Date__c</fullName>
    <label>Fellow Social Date</label>
    <type>Date</type>
</CustomField>