sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Field_visit_Fresh_Life_Farmstar__c.field-meta.xml
<CustomField>
    <fullName>Field_visit_Fresh_Life_Farmstar__c</fullName>
    <label>Field visit-Fresh Life/Farmstar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>