sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Field_visit_Fresh_life_Farmstar_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_visit_Fresh_life_Farmstar_Date__c</fullName>
    <label>Field visit-Fresh life/Farmstar Date</label>
    <type>Date</type>
</CustomField>