sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Kinanie_Visit__c.field-meta.xml
<CustomField>
    <fullName>Kinanie_Visit__c</fullName>
    <label>Kinanie Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>