sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Kinanie_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Kinanie_Visit_Date__c</fullName>
    <label>Kinanie Visit Date</label>
    <type>Date</type>
</CustomField>