sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>On/Offboarding Checklists (Manager)</relationshipLabel>
    <relationshipName>On_Offboarding_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>