sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/One_on_one_Date__c.field-meta.xml
<CustomField>
    <fullName>One_on_one_Date__c</fullName>
    <label>One on one Date</label>
    <type>Date</type>
</CustomField>