sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/One_on_One_with_Director__c.field-meta.xml
<CustomField>
    <fullName>One_on_One_with_Director__c</fullName>
    <label>One on One with Director</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>