sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Progress_check_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_check_Date__c</fullName>
    <label>Progress check Date</label>
    <type>Date</type>
</CustomField>