sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Self_Study_Resources__c.field-meta.xml
<CustomField>
    <fullName>Self_Study_Resources__c</fullName>
    <label>Self Study Resources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>