sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>