sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Trained__c.field-meta.xml
<CustomField>
    <fullName>Trained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trained</label>
    <type>Checkbox</type>
</CustomField>