sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Trained_By__c.field-meta.xml
<CustomField>
    <fullName>Trained_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To:</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>On/Offboarding Checklists (Trained By:)</relationshipLabel>
    <relationshipName>Onboarding_Trainings1</relationshipName>
    <type>Lookup</type>
</CustomField>