sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code of Conduct</fullName>
            </value>
            <value>
                <fullName>Farm Star</fullName>
            </value>
            <value>
                <fullName>Fresh Life</fullName>
            </value>
            <value>
                <fullName>Future Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>