sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Week_1_feedback_form__c.field-meta.xml
<CustomField>
    <fullName>Week_1_feedback_form__c</fullName>
    <label>Week 1 feedback form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not sent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>