sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/Welcome_Note__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Note__c</fullName>
    <label>Welcome Note</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>