sfSandBoxCode/force-app/main/default/objects/On_Offboarding_Checklist__c/fields/X30s_Form__c.field-meta.xml
<CustomField>
    <fullName>X30s_Form__c</fullName>
    <label>30s Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filled</fullName>
            </value>
            <value>
                <fullName>Not Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>